line spacing fix and links title on contact us was wrong size

--- a/contact-us/contact-us.css
+++ b/contact-us/contact-us.css
@@ -11,7 +11,6 @@
 --faded: #00000080;
 --background-color: rgba(0, 0, 0, 0.8)
 }
-h3 { font-size: 28px;}
 h1, h2, h3, h4, h5, h6, strong{
     color: var(--mainText);
     font-family: 'Russo One', sans-serif;
